Thu Oct  2 00:21:11 2003  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* test/logger/test_logger.rb: unlinking file before close causes
	  problem under win32 box.

	* lib/xsd/datatypes.rb(XSDFloat, XSDDouble): add +/- sign explicitly
	  when stringified and embedded into XML instance.  Ruby's sprintf may
	  format -0.0 as "0.0" (no minus sign) depending on underlying C
	  sprintf implementation.

	* test/xsd/test_xsd.rb, test/soap/test_basetype.rb: follow above change.

	* test/soap/calc/*: give httpd config param "CGIInterpreter".
	  "/usr/bin/env ruby" thing does not work under non-Unix boxes.

Thu Oct  2 00:25:21 2003  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* signal.c (ruby_signal_name): adjust to the prototype.

	* process.c (pst_inspect): ditto.

	* ext/etc/etc.c (etc_getgrent, Init_etc): typo.

Wed Oct  1 20:49:41 2003  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (heaps): manage slots and limits together.  [ruby-dev:21453]

	* gc.c (add_heap): should not clear heaps slot even if realloc()
	  failed.

Wed Oct  1 20:36:49 2003  WATANABE Hirofumi  <eban@ruby-lang.org>

	* MANIFEST: add wince/mkconfig_wce.rb.

Wed Oct  1 17:22:33 2003  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/etc/etc.c: add new functions: setpwent, getpwent, endpwent,
	  setgrent, getgrent, endgrent.

	* ext/socket/socket.c (sock_s_gethostbyname): do not reverse lookup.

Wed Oct  1 17:01:30 2003  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_load): Object scope had priority over required file
	  scope.  [ruby-dev:21415]

Wed Oct 01 14:09:53 2003  Takaaki Uematsu <uema2x@jcom.home.ne.jp>

	* wince/mkconfig_wce.rb: sorry, forget to commit.

Wed Oct 01 10:08:42 2003  Takaaki Uematsu <uema2x@jcom.home.ne.jp>

	* wince/setup.mak: add sigmarionIII SDK support.

	* wince/Makefile.sub: ditto.

	* wince/mkexports.rb: fix linker error in SH4.

	* wince/mkconfig_wce.rb: camouflage RUBY_PLATFORM for compiling ext.

Wed Oct 01 08:02:52 2003  Takaaki Uematsu <uema2x@jcom.home.ne.jp>
